# plotly-graph

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: conf.py  generate_docs.sh  index.rst
docs/source/: igviz.rst  igviz.tests.rst  modules.rst
examples/: DiGraphs.ipynb  Multigraphs.ipynb  tutorial.ipynb
igviz/: __init__.py  igviz.py
igviz/tests/: test_plot.py
pgraph/: __init__.py  pgraph.py
pgraph/tests/: test_plot.py
tests/: test_plot.py
