[tool.poetry]
name = "igviz"
version = "0.4.0"
description = "Create interactive network graph visualizations."
authors = ["Ashton Sidhu"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
networkx = "2.4"
plotly = "4.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
