[tool.poetry]
name = "igviz"
version = "0.5.0"
description = "Create interactive network graph visualizations."
authors = ["Ashton Sidhu"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
networkx = "^2.8.5"
plotly = "^5.10.0"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
numpy = "^1.23.2"
scipy = "^1.9.0"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
